--- a/Web/EuTlWebView/src/main/resources/templates/fragments/footer.html
+++ b/Web/EuTlWebView/src/main/resources/templates/fragments/footer.html
@@ -5,8 +5,8 @@
 <body>
 <div th:fragment="footer" class="footer" style="">
   <div class="container-fluid">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <p class="col-md-12 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-light text-decoration-none">© 2023 Tudose Alin-Romeo</p>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-4 border-top bg-light rounded-top rounded-top-2">
+      <p class="col-md-12 d-flex align-items-center justify-content-center mb-0 mb-md-0 me-md-auto link-dark text-decoration-none">© 2023 Tudose Alin-Romeo</p>
     </footer>
   </div>
 </div>
