--- a/Web/EuTlWebView/src/main/resources/templates/home-view.html
+++ b/Web/EuTlWebView/src/main/resources/templates/home-view.html
@@ -6,7 +6,7 @@
 
 <div th:replace="~{fragments/header :: header}"></div>
 
-<div class="p-5 bg-transparent container align-content-center text-center h-100">
+<div class="p-5 bg-transparent container align-content-center text-center " style="height: 100vh;">
     <div class=" bg-transparent container align-content-center text-center mt-5 mb-5">
         <h1 class=".display-1 text-center text-light">Welcome to my EU Trusted Lists utility app</h1>
     </div>
