Finalizare pagina /tlbrowser/countryCode
Signed-off-by: Alin-Romeo Tudose <alintudose126@gmail.com>

--- a/Web/EuTlWebView/src/main/resources/static/css/styles.css
+++ b/Web/EuTlWebView/src/main/resources/static/css/styles.css
@@ -10,6 +10,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    font-family: Arial, Verdana, sans-serif;
 }
 
 hr.separator {
@@ -22,4 +23,12 @@ hr.separator-thin {
 
 .my-dark-blue {
     color: #004494;
+}
+
+.my-bold {
+    font-weight: bold;
+}
+
+.my-bg-gray {
+    background-color: #D3D4D5;
 }
