Finalizare webview Browser trusted lists
Signed-off-by: Alin-Romeo Tudose <alintudose126@gmail.com>

--- a/Web/EuTlWebView/src/main/resources/static/css/styles.css
+++ b/Web/EuTlWebView/src/main/resources/static/css/styles.css
@@ -29,6 +29,18 @@ hr.separator-thin {
     font-weight: bold;
 }
 
+.my-lighter {
+    font-weight: lighter;
+}
+
 .my-bg-gray {
     background-color: #D3D4D5;
+}
+
+.my-underline-hover:hover {
+    text-decoration: underline;
+}
+
+.min-height-cover {
+    min-height: 97vh;
 }
