--- a/Web/EuTlWebView/src/main/resources/static/css/styles.css
+++ b/Web/EuTlWebView/src/main/resources/static/css/styles.css
@@ -44,3 +44,8 @@ hr.separator-thin {
 .min-height-cover {
     min-height: 97vh;
 }
+
+.my-smaller-text {
+    font-size: 14px;
+    font-family: Arial, Verdana, sans-serif;
+}
