--- a/Web/EuTlWebView/src/main/resources/templates/view - trustedService.html
+++ b/Web/EuTlWebView/src/main/resources/templates/view - trustedService.html
@@ -35,7 +35,7 @@
                         <strong>Detailed Information</strong>
                     </a>
                 </div>
-                <div id="detailedInformationAccordionBody" class="collapse p-4" data-bs-parent="#accordion">
+                <div id="detailedInformationAccordionBody" class="collapse show p-4" data-bs-parent="#accordion">
                     <div class="card-body">
                         <div class="container">
                             <div class="row my-3">
